--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    /*background-color: #282c34;*/
-    background-color: #fff;
+    background-color: #282c34;
+    gap: 100px;
 }
