--- a/src/components/distCounter/Button/Button.module.css
+++ b/src/components/distCounter/Button/Button.module.css
@@ -1,18 +1,26 @@
 .button {
     padding: 0 20px;
     font-size: 30px;
-    background-color: rgb(6, 200, 248);
     font-weight: 900;
-    color:rgb(44, 43, 43);
     border-radius: 5px;
     border: none;
 }
 
-.button:active {
+.default {
+    background-color: rgb(6, 200, 248);
+    color:rgb(44, 43, 43);
+}
+
+.default:active {
     background-color: rgb(44, 43, 43);
     color: rgb(6, 200, 248);
 }
 
 .disabled {
-    opacity: .5;
+    color:rgb(44, 43, 43);
+    background-color: rgb(0, 164, 196);
+}
+
+.button:disabled {
+    opacity: .3;
 }
