--- a/src/components/distCounter/Counter/Scoreboard/Scoreboard.module.css
+++ b/src/components/distCounter/Counter/Scoreboard/Scoreboard.module.css
@@ -6,13 +6,23 @@
     height: 150px;
     border: 2px solid rgb(6, 200, 248);
     border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.counterValue {
     font-size: 60px;
     font-weight: bold;
     color: rgb(6, 200, 248);
-    margin-bottom: 15px;
 }
 
 .maxValue {
     color: #e10101;
+}
+
+.clueText {
+    font-size: 25px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: rgb(6, 200, 248);
 }
 
