refactor counter, change functional counter and added style css

--- a/src/components/distCounter/Counter/Scoreboard/Scoreboard.module.css
+++ b/src/components/distCounter/Counter/Scoreboard/Scoreboard.module.css
@@ -26,3 +26,10 @@
     color: rgb(6, 200, 248);
 }
 
+.errorText {
+    font-size: 25px;
+    color: red;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
